--- a/app/src/main/res/layout/fragment_representative.xml
+++ b/app/src/main/res/layout/fragment_representative.xml
@@ -101,7 +101,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorPrimaryDark"
             android:text="@string/use_my_location"
-            android:textColor="@color/white"
+            android:textColor="@color/button_color"
             app:layout_constraintTop_toBottomOf="@id/button_search" />
 
         <TextView
