--- a/app/src/main/res/layout/fragment_election.xml
+++ b/app/src/main/res/layout/fragment_election.xml
@@ -62,7 +62,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_saved"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_16"
             android:nestedScrollingEnabled="false"
             app:layout_constraintBottom_toBottomOf="parent"
